--- a/src/scss/common/fonts.scss
+++ b/src/scss/common/fonts.scss
@@ -41,21 +41,26 @@
   font-display: swap;
 }
 
-// @font-face {
-//   font-family: 'CenturyGothic';
-//   font-style: normal;
-//   font-weight: normal;
-//   font-display: swap;
-//   src: url('/fonts/CenturyGothic.woff2') format('woff2');
-//   unicode-range: U+21-23, U+25-5F, U+61-7E, U+AB, U+BB, U+401, U+410-44F, U+451,
-//     U+2013, U+2014, U+2018, U+2019, U+201C-201E, U+2026, U+20BD;
-// }
-// @font-face {
-//   font-family: 'CenturyGothic';
-//   font-style: normal;
-//   font-weight: bold;
-//   font-display: swap;
-//   src: url('/fonts/CenturyGothic-Bold.woff2') format('woff2');
-//   unicode-range: U+21-23, U+25-5F, U+61-7E, U+AB, U+BB, U+401, U+410-44F, U+451,
-//     U+2013, U+2014, U+2018, U+2019, U+201C-201E, U+2026, U+20BD;
-// }
+@font-face {
+  font-family: 'Bitter';
+  src: url('/fonts/Bitter-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Georgia';
+  src: url('/fonts/Georgia.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Georgia';
+  src: url('/fonts/Georgia-Italic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
