--- a/src/scss/common/variables.scss
+++ b/src/scss/common/variables.scss
@@ -1,6 +1,7 @@
 :root {
   // main colors
   --color-white: #f6f4f3;
+  --color-ink-0: #17181d;
   --color-ink-1: #2c2e3a;
   --color-ink-2: #3e4156;
   --color-ink-3: #545876;
@@ -11,13 +12,8 @@
   --color-beige-4: #b09971;
   --color-beige-5: #ae9c79;
   --color-beige-6: #736d5e;
-
-  // transparent colors
-  --color-tr-shadow: #0000004d;
-  --color-glow: #cfe1ff99;
-
-  // text colors
-  --color-text-accent-1: #6a6049;
+  --color-beige-7: #6a6049;
+  --color-dirty-blue: #345676;
 
   // backgrounds
   --bg-body: #181b1f;
@@ -31,7 +27,7 @@
   --bg-stripe-dark: linear-gradient(
     90deg,
     transparent 0%,
-    #345676 50%,
+    var(--color-dirty-blue) 50%,
     transparent 100%
   );
 
@@ -42,7 +38,11 @@
     transparent 100%
   );
 
-  --bg-footer: linear-gradient(90deg, var(var(--color-ink-1)) 0%, #17181d 100%);
+  --bg-footer: linear-gradient(
+    90deg,
+    var(--color-ink-1) 0%,
+    var(--color-ink-0) 100%
+  );
 
   // shadows
   --shadow-section: 0 -16px 16px #00000040;
@@ -52,20 +52,20 @@
   // mask
   --mask-gradient: linear-gradient(
     90deg,
-    transparent 0%,
-    #ffffff 10%,
-    #ffffff 90%,
-    transparent 100%
+    #0000 0%,
+    #ffffff 5%,
+    #ffffff 95%,
+    #0000 100%
   );
 
   // fonts
   --font-family-text: 'Inter', Arial, Verdana, sans-serif;
-  --font-family-header: 'Bitter', Arial, Verdana, serif;
-  --font-family-accent: 'Georgia', Verdana, serif;
+  --font-family-header: 'Bitter', 'Times New Roman', Times, serif;
+  --font-family-accent: 'Georgia', 'Times New Roman', Times, serif;
 
   // common style
   --desktop-max-width: 1280px;
-  --xxl-max-width: 1680px;
+  // --xxl-max-width: 1680px;
   --container-max-width: 1040px;
   --side-spacing: 75px;
   --navbar-height: 90px;
