--- a/src/scss/components/burger_menu.scss
+++ b/src/scss/components/burger_menu.scss
@@ -1,77 +1,77 @@
 .burger-menu {
   display: none;
-  position: fixed;
-  top: 52px;
-  right: -100%;
-  width: 100%;
-  max-width: 400px;
-  height: 100dvh;
-  line-height: 1.2;
-  background: var(--color-menu-dark);
-  transition: transform var(--transition-duration);
-  transform: translateX(0);
+  // position: fixed;
+  // top: 52px;
+  // right: -100%;
+  // width: 100%;
+  // max-width: 400px;
+  // height: 100dvh;
+  // line-height: 1.2;
+  // background: var(--color-menu-dark);
+  // transition: transform var(--transition-duration);
+  // transform: translateX(0);
 
-  &__item {
-    width: 100%;
-    border-bottom: 2px solid var(--color-menu-border);
+  // &__item {
+  //   width: 100%;
+  //   border-bottom: 2px solid var(--color-menu-border);
 
-    &:last-of-type {
-      border-bottom: none;
-    }
+  //   &:last-of-type {
+  //     border-bottom: none;
+  //   }
 
-    &__link {
-      display: block;
-      height: 100%;
-      padding: 20px 30px;
-    }
+  //   &__link {
+  //     display: block;
+  //     height: 100%;
+  //     padding: 20px 30px;
+  //   }
 
-    .burger-submenu {
-      width: 100%;
-      margin-left: 20px;
+  //   .burger-submenu {
+  //     width: 100%;
+  //     margin-left: 20px;
 
-      &__item {
-        position: relative;
-        border-top: 2px solid var(--color-menu-border);
+  //     &__item {
+  //       position: relative;
+  //       border-top: 2px solid var(--color-menu-border);
 
-        &::before {
-          content: '';
-          position: absolute;
-          width: 8px;
-          height: 8px;
-          top: 0;
-          bottom: 0;
-          left: 10px;
-          margin-block: auto;
-          border-radius: 50%;
-          background: var(--bg-section);
-        }
+  //       &::before {
+  //         content: '';
+  //         position: absolute;
+  //         width: 8px;
+  //         height: 8px;
+  //         top: 0;
+  //         bottom: 0;
+  //         left: 10px;
+  //         margin-block: auto;
+  //         border-radius: 50%;
+  //         background: var(--bg-section);
+  //       }
 
-        &__link {
-          display: block;
-          height: 100%;
-          padding: 20px 30px;
-          margin-right: 20px;
-          color: var(--color-points-light);
-        }
-      }
-    }
-  }
+  //       &__link {
+  //         display: block;
+  //         height: 100%;
+  //         padding: 20px 30px;
+  //         margin-right: 20px;
+  //         color: var(--color-points-light);
+  //       }
+  //     }
+  //   }
+  // }
 
-  &_visible {
-    transform: translateX(-100dvw);
+  // &_visible {
+  //   transform: translateX(-100dvw);
 
-    &::before {
-      content: '';
-      position: absolute;
-      width: calc(100dvw - 100%);
-      height: 100dvh;
-      top: 0;
-      right: 100%;
-      backdrop-filter: brightness(50%) blur(4px);
-      opacity: 0;
-      animation: backdrop-appear 0.2s 0.2s ease-out forwards;
-    }
-  }
+  //   &::before {
+  //     content: '';
+  //     position: absolute;
+  //     width: calc(100dvw - 100%);
+  //     height: 100dvh;
+  //     top: 0;
+  //     right: 100%;
+  //     backdrop-filter: brightness(50%) blur(4px);
+  //     opacity: 0;
+  //     animation: backdrop-appear 0.2s 0.2s ease-out forwards;
+  //   }
+  // }
 }
 
 @keyframes backdrop-appear {
