--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -1,11 +1,11 @@
 main {
   width: 100%;
-  max-width: var(--desktop-max-width);
-  margin: auto;
+  // max-width: var(--desktop-max-width);
+  // margin: auto;
 }
 
 @import './section_intro.scss';
 @import './sections.scss';
-@import './section_about.scss';
-@import './section_products.scss';
-@import './section_ejectors.scss';
+@import './section_exp.scss';
+// @import './section_spec.scss';
+// @import './section_contacts.scss';
