--- a/src/scss/components/preloader.scss
+++ b/src/scss/components/preloader.scss
@@ -4,43 +4,46 @@
   left: 0;
   width: 100dvw;
   height: 100dvh;
-  background: var(--bg-section-products);
+  background: var(--color-white);
   z-index: 199;
   display: flex;
   align-items: center;
   justify-content: center;
 
   .loader {
-    width: 200px;
-    height: 200px;
-    margin-block: auto;
-    display: grid;
-    border: 10px solid #0000;
-    border-radius: 50%;
-    border-right-color: #f9a828;
-    animation: spin 1s infinite linear;
-
-    &::before,
-    &::after {
-      content: '';
-      grid-area: 1/1;
-      margin: 26px;
-      border: inherit;
-      border-right-color: #f9a828;
-      border-radius: 50%;
-      animation: spin 2s infinite;
-    }
-
-    &::after {
-      margin: 8px;
-      animation-duration: 3s;
-      border-right-color: #333;
-    }
+    width: 110px;
+    height: 110px;
+    --g1: conic-gradient(
+      from 90deg at 6px 6px,
+      #0000 90deg,
+      var(--color-beige-3) 0
+    );
+    --g2: conic-gradient(
+      from -90deg at 44px 44px,
+      var(--color-beige-3) 90deg,
+      var(--color-ink-1) 0
+    );
+    background: var(--g1), var(--g1), var(--g1), var(--g2), var(--g2), var(--g2);
+    background-size: 50px 50px;
+    background-repeat: no-repeat;
+    animation: switching-boxes 1.5s infinite;
   }
 
-  @keyframes spin {
+  @keyframes switching-boxes {
+    0% {
+      background-position: 0 0, 0 100%, 100% 100%;
+    }
+    25% {
+      background-position: 100% 0, 0 100%, 100% 100%;
+    }
+    50% {
+      background-position: 100% 0, 0 0, 100% 100%;
+    }
+    75% {
+      background-position: 100% 0, 0 0, 0 100%;
+    }
     100% {
-      transform: rotate(1turn);
+      background-position: 100% 100%, 0 0, 0 100%;
     }
   }
 }
