--- a/src/scss/components/section_intro.scss
+++ b/src/scss/components/section_intro.scss
@@ -1,10 +1,5 @@
-h1 {
-  font: normal bold 4rem/1.2 var(--font-family-header);
-  color: var(--color-text-header);
-}
-
 .intro {
-  padding: calc(var(--navbar-height) + 150px) 120px 140px;
+  padding: calc(var(--navbar-height) + 110px) var(--side-spacing) 160px 120px;
   width: 100%;
   max-width: var(--desktop-max-width);
   margin-inline: auto;
@@ -13,7 +8,7 @@ h1 {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  column-gap: 60px;
+  column-gap: 80px;
 
   background-repeat: no-repeat;
   background-size: cover;
@@ -26,47 +21,49 @@ h1 {
 
   &__content {
     width: 100%;
-    max-width: 460px;
+    max-width: 450px;
+  }
 
-    .slogan {
-      margin-block: 30px 60px;
-      font: 1.75rem/1.25 var(--font-family-header);
-    }
+  &__header {
+    max-width: 350px;
+    font-family: var(--font-family-header);
+    font-size: 42px;
+    line-height: 1.3;
+  }
 
-    .btn-link-wrapper {
-      display: block;
-      width: fit-content;
-    }
+  &__stripe {
+    width: 100%;
+    height: 5px;
+    margin-block: 40px;
+    background: var(--color-beige-3);
+  }
 
-    .link-btn {
-      padding: 22px 34px 22px 30px;
-      border-radius: 20px;
-      background: var(--bg-button);
-      text-align: right;
-      transition: all var(--transition-duration);
+  &__sub-wrapper {
+    display: flex;
+    column-gap: 40px;
+    margin-inline: 20px;
+  }
 
-      &__text,
-      &__subtext {
-        transition: all var(--transition-duration);
-      }
+  &__subheader {
+    margin-block: 2px 12px;
+    font-size: 26px;
+    letter-spacing: 1.3px;
+    text-transform: uppercase;
+    color: var(--color-beige-3);
+  }
 
-      &__text {
-        font-size: 1.375rem;
-        margin-bottom: 10px;
-      }
-
-      &__subtext {
-        margin-right: 8px;
-        font-size: 1.125rem;
-        color: var(--color-text-accent-2);
-      }
-    }
+  &__slogan {
+    font-family: var(--font-family-accent);
+    font-size: 20px;
+    font-style: italic;
+    line-height: 1.3;
+    color: var(--color-beige-1);
   }
 
   &__img {
     width: 100%;
     height: 100%;
-    max-width: 504px;
-    max-height: 416px;
+    max-width: 550px;
+    max-height: 560px;
   }
 }
