--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,6 @@
 @import './components/button_burger.scss';
 @import './components/burger_menu.scss';
 @import './components/main.scss';
-// @import './components/footer.scss';
-// @import './components/button_up.scss';
-// @import './common/media_queries.scss';
+@import './components/footer.scss';
+@import './components/button_up.scss';
+@import './common/media_queries.scss';
