--- a/src/scss/common/media_queries.scss
+++ b/src/scss/common/media_queries.scss
@@ -1,547 +1,556 @@
 @media (hover: hover) {
-  .intro {
-    &__content {
-      .link-btn {
-        &:hover {
-          box-shadow: 0 0 8px 8px var(--color-glow);
+  #navbar {
+    .menu {
+      &__list {
+        &__item:hover::after {
+          width: 100%;
         }
-        &:hover .link-btn__text {
-          color: var(--color-text-accent-2);
+
+        &__link:hover {
+          color: var(--color-beige-4);
         }
-        &:hover .link-btn__subtext {
-          color: var(--color-bg-header-start);
-        }
+      }
+
+      &__tel:hover {
+        color: var(--color-dirty-blue);
       }
     }
   }
 
-  #products {
-    .products__list {
-      .item-description {
-        &__link {
-          &:hover {
-            color: var(--color-text-accent-2);
+  #exp {
+    .exp__list {
+      .item-text a:hover {
+        color: var(--color-ink-1);
+      }
+    }
+  }
+
+  #contacts {
+    .contacts__container {
+      .address {
+        .about {
+          p a:hover {
+            color: var(--color-beige-3);
+          }
+        }
+
+        .info {
+          a:hover {
+            color: var(--color-beige-3);
           }
         }
       }
     }
   }
 
-  #contacts {
-    .footer__contacts {
-      &__link:hover {
-        color: var(--color-points-light);
+  .footer {
+    &__menu {
+      li > a:hover {
+        color: var(--color-white);
       }
     }
 
-    .footer__menu {
-      &__list__link:hover {
-        color: var(--color-points-light);
-      }
-    }
-
-    .credits {
+    &__credits {
       .developer {
-        svg:hover {
-          fill: var(--color-points-light);
+        a:hover > svg {
+          fill: var(--color-beige-1);
         }
       }
     }
   }
 
   .btn-up:hover {
-    opacity: 0.7;
+    opacity: 1;
   }
 }
 
 @media screen and (min-width: 1281px) {
-  main {
-    max-width: var(--xxl-max-width);
-    mask-image: var(--mask-gradient);
-  }
-
   .section {
-    padding-inline: calc(
-      ((100% - var(--desktop-max-width)) / 2) + var(--side-spacing)
-    );
-  }
-
-  #products .products__decal,
-  #ejectors .ejectors__decal {
-    right: 200px;
-  }
-
-  #contacts {
-    overflow: visible;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  #navbar {
     &::before,
     &::after {
-      content: none;
+      content: '';
+      position: absolute;
+      top: 0;
+      height: 100%;
+      width: calc((100% - var(--desktop-max-width) - 100px) / 2);
+      background: rgba(0, 0, 0, 0.06);
     }
-  }
 
-  #contacts {
-    background: radial-gradient(
-      circle at 0 35%,
-      var(--color-bg-header-start) 0%,
-      var(--color-text-accent-2) 10%,
-      var(--color-bg-darkblue) 38%,
-      var(--color-bg-footer-end) 100%
-    );
-
-    &::before,
+    &::before {
+      left: 0;
+    }
     &::after {
-      content: none;
-    }
-
-    .footer__menu {
-      margin: -56px auto 0;
-
-      &__list {
-        grid-template-columns: repeat(3, auto);
-        grid-template-rows: repeat(2, auto);
-      }
-    }
-
-    .credits {
-      padding-inline: 0 50px;
-      max-width: 470px;
-      margin: -36px 0 0 auto;
+      right: 0;
     }
   }
 }
 
-@media screen and (max-width: 992px) {
-  :root {
-    --navbar-height: 52px;
-  }
-  #navbar {
-    .menu {
-      .logo {
-        height: 40px;
-        width: auto;
-      }
-
-      &__list {
-        display: none;
-      }
-
-      .burger-btn,
-      .burger-menu {
-        display: block;
-      }
-    }
-  }
-
-  .intro {
-    column-gap: 0;
-
-    &__content {
-      width: 100%;
-      max-width: none;
-    }
-
-    &__img {
-      display: none;
-    }
-  }
-
-  #about {
-    .about__list {
-      .stripe-left {
-        margin: 50px 0 50px auto;
-      }
-
-      &__item {
-        &:nth-of-type(3) {
-          .about__list__item__text {
-            margin-top: 0;
-          }
-        }
-
-        &:nth-of-type(5) {
-          .about__list__item__text {
-            margin-top: 0;
-          }
-        }
-      }
-    }
-  }
-
-  #products {
-    .products__list {
-      .item-container {
-        flex-direction: column;
-      }
-
-      .item-picture {
-        margin-inline: auto;
-      }
-
-      .item-description {
-        max-width: 100%;
-      }
-    }
-  }
-
-  #contacts {
-    .footer__menu {
-      &__list {
-        gap: 16px 40px;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 920px) {
-  #about {
-    .about__list {
-      &__item {
-        flex-direction: column;
-
-        &__icon {
-          margin-inline: auto;
-        }
-      }
-    }
-  }
-
-  #products {
-    .products__list {
-      .item-header {
-        max-width: 480px;
-        margin: -30px auto 50px;
-      }
-
-      .es-decoration {
-        width: 1226px;
-        height: auto;
-        margin-left: calc((var(--side-spacing) + 146px) * -1);
-      }
-    }
-  }
-
-  #contacts {
-    .footer__header::before {
-      width: calc(100dvw - 100% - 60px - 2 * var(--side-spacing));
-    }
-
-    .footer__menu {
-      &__list {
-        gap: 26px 40px;
-      }
-    }
-
-    .footer__es-decoration {
-      width: 1226px;
-      height: auto;
-      margin-left: calc((var(--side-spacing) + 146px) * -1);
-    }
-
-    .credits {
-      margin: -16px 0 0 auto;
-    }
-  }
-}
-
-@media screen and (max-width: 668px) {
-  #navbar {
-    padding-inline: 30px;
-  }
-
-  .intro {
-    padding-inline: var(--side-spacing);
-    background-position-x: 25%;
-  }
-
-  #products {
-    .products__list {
-      .es-decoration {
-        width: 1000px;
-        height: auto;
-        margin-left: calc((var(--side-spacing) + 126px) * -1);
-      }
-
-      .item-header {
-        max-width: 400px;
-        font-size: 22px;
-        margin: -22px auto 50px;
-      }
-    }
-  }
-
-  #contacts {
-    background: radial-gradient(
-      circle at 0 43%,
-      var(--color-bg-header-start) 0%,
-      var(--color-text-accent-2) 10%,
-      var(--color-bg-darkblue) 38%,
-      var(--color-bg-footer-end) 100%
-    );
-
-    .footer__container {
-      row-gap: 60px;
-    }
-
-    .footer__menu {
-      margin: 0 auto;
-
-      &__list {
-        grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(3, auto);
-        gap: 16px 40px;
-      }
-    }
-
-    .credits {
-      justify-content: center;
-      gap: 10px 38px;
-      padding: 0;
-
-      .developer {
-        p {
-          max-width: 170px;
-          line-height: 1.2;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 576px) {
-  :root {
-    --side-spacing: 36px;
-  }
-
-  h1 {
-    font-size: 2.25rem;
-  }
-
-  .intro {
-    padding: calc(var(--navbar-height) + 100px) var(--side-spacing) 80px;
-    background-position-x: 40%;
-
-    &__content {
-      .slogan {
-        font-size: 1.25rem;
-        margin-bottom: 50px;
-      }
-
-      .btn-link-wrapper {
-        margin-inline: auto;
-      }
-
-      .link-btn {
-        padding: 18px 30px 18px 28px;
-        border-radius: 14px;
-
-        &__text {
-          font-size: 1rem;
-        }
-
-        &__subtext {
-          font-size: 0.875rem;
-        }
-      }
-    }
-  }
-
-  .section {
-    padding-block: 50px 60px;
-    font-size: 0.875rem;
-
-    &__header {
-      font-size: 1.5rem;
-    }
-
-    &__header-wrapper {
-      column-gap: 20px;
-    }
-
-    .stripe-left,
-    .stripe-right {
-      height: 8px;
-      margin-top: 11px;
-    }
-
-    .subheader {
-      font-size: 1rem;
-      line-height: 1.2;
-      margin-top: 36px;
-    }
-  }
-
-  #about {
-    .subheader {
-      margin-bottom: 20px;
-    }
-
-    .about__list {
-      .stripe-left {
-        margin: 30px 0 30px auto;
-      }
-    }
-  }
-
-  #products {
-    .products__decal {
-      width: 100%;
-      height: auto;
-    }
-
-    .products__list {
-      margin: 44px auto 40px;
-
-      &__item {
-        margin-bottom: 50px;
-      }
-
-      .item-header {
-        margin: -35px auto 26px;
-        font-size: 1.25rem;
-      }
-
-      .item-container {
-        row-gap: 20px;
-      }
-
-      .item-picture {
-        width: 260px;
-        height: 260px;
-      }
-
-      .item-description {
-        &__short-list {
-          margin: 20px auto 20px;
-
-          li {
-            padding-left: 26px;
-            margin-bottom: 10px;
-
-            &::before {
-              margin-top: 5px;
-              width: 8px;
-              height: 8px;
-            }
-          }
-        }
-      }
-
-      .item-description-list {
-        .main-list__item {
-          margin: 0 auto 40px;
-
-          &:first-of-type {
-            margin-top: 30px;
-          }
-        }
-      }
-    }
-  }
-
-  #ejectors {
-    .scheme-wrapper {
-      margin: 20px auto 30px;
-      padding-block: 20px;
-    }
-
-    .ejectors__subsection {
-      margin-bottom: 20px;
-    }
-
-    .ejectors__list {
-      margin-top: 20px;
-
-      &__item {
-        padding-left: 26px;
-
-        &::before {
-          margin-top: 5px;
-          width: 8px;
-          height: 8px;
-        }
-      }
-    }
-
-    .ejectors__decal {
-      width: 100%;
-      height: auto;
-    }
-  }
-
-  #contacts {
-    padding: 50px var(--side-spacing) 30px;
-    background: linear-gradient(
-      180deg,
-      var(--color-bg-footer-end) 0%,
-      var(--color-bg-darkblue) 30%,
-      var(--color-text-accent-2) 34%,
-      var(--color-bg-header-start) 36%,
-      var(--color-text-accent-2) 42%,
-      var(--color-bg-darkblue) 60%,
-      var(--color-bg-footer-end) 100%
-    );
-
-    .footer__container {
-      margin: 0 auto 30px;
-
-      div {
-        margin-inline: auto;
-      }
-    }
-
-    .footer__header::before {
-      content: none;
-    }
-
-    .footer__contacts {
-      margin: 44px 0 0 auto;
-      row-gap: 24px;
-    }
-
-    .footer__menu {
-      &__list {
-        grid-template-columns: repeat(1, auto);
-        grid-template-rows: repeat(6, auto);
-      }
-    }
-
-    .footer__es-decoration {
-      width: 1000px;
-      height: auto;
-      margin-left: calc((var(--side-spacing) + 126px) * -1);
-    }
-
-    .credits {
-      margin-top: 20px;
-    }
-  }
-
-  .btn-up {
-    width: 40px;
-    height: 40px;
-    padding: 10px;
-    border-radius: 10px;
-    bottom: 12px;
-    right: 12px;
-  }
-}
-
-@media screen and (max-width: 382px) {
-  .intro {
-    &__content {
-      .btn-link-wrapper {
-        width: 200px;
-        line-height: 1.2;
-      }
-
-      .link-btn__text {
-        text-align: center;
-      }
-    }
-  }
-}
+// @media screen and (max-width: 1100px) {
+//   #navbar {
+//     &::before,
+//     &::after {
+//       content: none;
+//     }
+//   }
+
+//   #contacts {
+//     background: radial-gradient(
+//       circle at 0 35%,
+//       var(--color-bg-header-start) 0%,
+//       var(--color-text-accent-2) 10%,
+//       var(--color-bg-darkblue) 38%,
+//       var(--color-bg-footer-end) 100%
+//     );
+
+//     &::before,
+//     &::after {
+//       content: none;
+//     }
+
+//     .footer__menu {
+//       margin: -56px auto 0;
+
+//       &__list {
+//         grid-template-columns: repeat(3, auto);
+//         grid-template-rows: repeat(2, auto);
+//       }
+//     }
+
+//     .credits {
+//       padding-inline: 0 50px;
+//       max-width: 470px;
+//       margin: -36px 0 0 auto;
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 992px) {
+//   :root {
+//     --navbar-height: 52px;
+//   }
+//   #navbar {
+//     .menu {
+//       .logo {
+//         height: 40px;
+//         width: auto;
+//       }
+
+//       &__list {
+//         display: none;
+//       }
+
+//       .burger-btn,
+//       .burger-menu {
+//         display: block;
+//       }
+//     }
+//   }
+
+//   .intro {
+//     column-gap: 0;
+
+//     &__content {
+//       width: 100%;
+//       max-width: none;
+//     }
+
+//     &__img {
+//       display: none;
+//     }
+//   }
+
+//   #about {
+//     .about__list {
+//       .stripe-left {
+//         margin: 50px 0 50px auto;
+//       }
+
+//       &__item {
+//         &:nth-of-type(3) {
+//           .about__list__item__text {
+//             margin-top: 0;
+//           }
+//         }
+
+//         &:nth-of-type(5) {
+//           .about__list__item__text {
+//             margin-top: 0;
+//           }
+//         }
+//       }
+//     }
+//   }
+
+//   #products {
+//     .products__list {
+//       .item-container {
+//         flex-direction: column;
+//       }
+
+//       .item-picture {
+//         margin-inline: auto;
+//       }
+
+//       .item-description {
+//         max-width: 100%;
+//       }
+//     }
+//   }
+
+//   #contacts {
+//     .footer__menu {
+//       &__list {
+//         gap: 16px 40px;
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 920px) {
+//   #about {
+//     .about__list {
+//       &__item {
+//         flex-direction: column;
+
+//         &__icon {
+//           margin-inline: auto;
+//         }
+//       }
+//     }
+//   }
+
+//   #products {
+//     .products__list {
+//       .item-header {
+//         max-width: 480px;
+//         margin: -30px auto 50px;
+//       }
+
+//       .es-decoration {
+//         width: 1226px;
+//         height: auto;
+//         margin-left: calc((var(--side-spacing) + 146px) * -1);
+//       }
+//     }
+//   }
+
+//   #contacts {
+//     .footer__header::before {
+//       width: calc(100dvw - 100% - 60px - 2 * var(--side-spacing));
+//     }
+
+//     .footer__menu {
+//       &__list {
+//         gap: 26px 40px;
+//       }
+//     }
+
+//     .footer__es-decoration {
+//       width: 1226px;
+//       height: auto;
+//       margin-left: calc((var(--side-spacing) + 146px) * -1);
+//     }
+
+//     .credits {
+//       margin: -16px 0 0 auto;
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 668px) {
+//   #navbar {
+//     padding-inline: 30px;
+//   }
+
+//   .intro {
+//     padding-inline: var(--side-spacing);
+//     background-position-x: 25%;
+//   }
+
+//   #products {
+//     .products__list {
+//       .es-decoration {
+//         width: 1000px;
+//         height: auto;
+//         margin-left: calc((var(--side-spacing) + 126px) * -1);
+//       }
+
+//       .item-header {
+//         max-width: 400px;
+//         font-size: 22px;
+//         margin: -22px auto 50px;
+//       }
+//     }
+//   }
+
+//   #contacts {
+//     background: radial-gradient(
+//       circle at 0 43%,
+//       var(--color-bg-header-start) 0%,
+//       var(--color-text-accent-2) 10%,
+//       var(--color-bg-darkblue) 38%,
+//       var(--color-bg-footer-end) 100%
+//     );
+
+//     .footer__container {
+//       row-gap: 60px;
+//     }
+
+//     .footer__menu {
+//       margin: 0 auto;
+
+//       &__list {
+//         grid-template-columns: repeat(2, auto);
+//         grid-template-rows: repeat(3, auto);
+//         gap: 16px 40px;
+//       }
+//     }
+
+//     .credits {
+//       justify-content: center;
+//       gap: 10px 38px;
+//       padding: 0;
+
+//       .developer {
+//         p {
+//           max-width: 170px;
+//           line-height: 1.2;
+//         }
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 576px) {
+//   :root {
+//     --side-spacing: 36px;
+//   }
+
+//   h1 {
+//     font-size: 2.25rem;
+//   }
+
+//   .intro {
+//     padding: calc(var(--navbar-height) + 100px) var(--side-spacing) 80px;
+//     background-position-x: 40%;
+
+//     &__content {
+//       .slogan {
+//         font-size: 1.25rem;
+//         margin-bottom: 50px;
+//       }
+
+//       .btn-link-wrapper {
+//         margin-inline: auto;
+//       }
+
+//       .link-btn {
+//         padding: 18px 30px 18px 28px;
+//         border-radius: 14px;
+
+//         &__text {
+//           font-size: 1rem;
+//         }
+
+//         &__subtext {
+//           font-size: 0.875rem;
+//         }
+//       }
+//     }
+//   }
+
+//   .section {
+//     padding-block: 50px 60px;
+//     font-size: 0.875rem;
+
+//     &__header {
+//       font-size: 1.5rem;
+//     }
+
+//     &__header-wrapper {
+//       column-gap: 20px;
+//     }
+
+//     .stripe-left,
+//     .stripe-right {
+//       height: 8px;
+//       margin-top: 11px;
+//     }
+
+//     .subheader {
+//       font-size: 1rem;
+//       line-height: 1.2;
+//       margin-top: 36px;
+//     }
+//   }
+
+//   #about {
+//     .subheader {
+//       margin-bottom: 20px;
+//     }
+
+//     .about__list {
+//       .stripe-left {
+//         margin: 30px 0 30px auto;
+//       }
+//     }
+//   }
+
+//   #products {
+//     .products__decal {
+//       width: 100%;
+//       height: auto;
+//     }
+
+//     .products__list {
+//       margin: 44px auto 40px;
+
+//       &__item {
+//         margin-bottom: 50px;
+//       }
+
+//       .item-header {
+//         margin: -35px auto 26px;
+//         font-size: 1.25rem;
+//       }
+
+//       .item-container {
+//         row-gap: 20px;
+//       }
+
+//       .item-picture {
+//         width: 260px;
+//         height: 260px;
+//       }
+
+//       .item-description {
+//         &__short-list {
+//           margin: 20px auto 20px;
+
+//           li {
+//             padding-left: 26px;
+//             margin-bottom: 10px;
+
+//             &::before {
+//               margin-top: 5px;
+//               width: 8px;
+//               height: 8px;
+//             }
+//           }
+//         }
+//       }
+
+//       .item-description-list {
+//         .main-list__item {
+//           margin: 0 auto 40px;
+
+//           &:first-of-type {
+//             margin-top: 30px;
+//           }
+//         }
+//       }
+//     }
+//   }
+
+//   #ejectors {
+//     .scheme-wrapper {
+//       margin: 20px auto 30px;
+//       padding-block: 20px;
+//     }
+
+//     .ejectors__subsection {
+//       margin-bottom: 20px;
+//     }
+
+//     .ejectors__list {
+//       margin-top: 20px;
+
+//       &__item {
+//         padding-left: 26px;
+
+//         &::before {
+//           margin-top: 5px;
+//           width: 8px;
+//           height: 8px;
+//         }
+//       }
+//     }
+
+//     .ejectors__decal {
+//       width: 100%;
+//       height: auto;
+//     }
+//   }
+
+//   #contacts {
+//     padding: 50px var(--side-spacing) 30px;
+//     background: linear-gradient(
+//       180deg,
+//       var(--color-bg-footer-end) 0%,
+//       var(--color-bg-darkblue) 30%,
+//       var(--color-text-accent-2) 34%,
+//       var(--color-bg-header-start) 36%,
+//       var(--color-text-accent-2) 42%,
+//       var(--color-bg-darkblue) 60%,
+//       var(--color-bg-footer-end) 100%
+//     );
+
+//     .footer__container {
+//       margin: 0 auto 30px;
+
+//       div {
+//         margin-inline: auto;
+//       }
+//     }
+
+//     .footer__header::before {
+//       content: none;
+//     }
+
+//     .footer__contacts {
+//       margin: 44px 0 0 auto;
+//       row-gap: 24px;
+//     }
+
+//     .footer__menu {
+//       &__list {
+//         grid-template-columns: repeat(1, auto);
+//         grid-template-rows: repeat(6, auto);
+//       }
+//     }
+
+//     .footer__es-decoration {
+//       width: 1000px;
+//       height: auto;
+//       margin-left: calc((var(--side-spacing) + 126px) * -1);
+//     }
+
+//     .credits {
+//       margin-top: 20px;
+//     }
+//   }
+
+//   .btn-up {
+//     width: 40px;
+//     height: 40px;
+//     padding: 10px;
+//     border-radius: 10px;
+//     bottom: 12px;
+//     right: 12px;
+//   }
+// }
+
+// @media screen and (max-width: 382px) {
+//   .intro {
+//     &__content {
+//       .btn-link-wrapper {
+//         width: 200px;
+//         line-height: 1.2;
+//       }
+
+//       .link-btn__text {
+//         text-align: center;
+//       }
+//     }
+//   }
+// }
