--- a/src/scss/common/variables.scss
+++ b/src/scss/common/variables.scss
@@ -65,8 +65,8 @@
 
   // common style
   --desktop-max-width: 1280px;
-  // --xxl-max-width: 1680px;
   --container-max-width: 1040px;
+  --container-width: 1130px;
   --side-spacing: 75px;
   --navbar-height: 90px;
 
