--- a/src/scss/components/burger_menu.scss
+++ b/src/scss/components/burger_menu.scss
@@ -1,81 +1,54 @@
-.burger-menu {
-  display: none;
-  // position: fixed;
-  // top: 52px;
-  // right: -100%;
-  // width: 100%;
-  // max-width: 400px;
-  // height: 100dvh;
-  // line-height: 1.2;
-  // background: var(--color-menu-dark);
-  // transition: transform var(--transition-duration);
-  // transform: translateX(0);
+#navbar {
+  .burger-menu {
+    display: none;
+    position: fixed;
+    top: var(--navbar-height);
+    right: -100%;
+    width: 100%;
+    max-width: 400px;
+    height: 100dvh;
+    // line-height: 1.2;
+    background: var(--color-white);
+    transition: transform var(--transition-duration);
+    transform: translateX(0);
 
-  // &__item {
-  //   width: 100%;
-  //   border-bottom: 2px solid var(--color-menu-border);
+    &__item {
+      width: 100%;
+      border-top: 2px solid var(--color-beige-5);
 
-  //   &:last-of-type {
-  //     border-bottom: none;
-  //   }
+      &__link {
+        display: block;
+        height: 100%;
+        padding: 20px 30px;
+        color: var(--color-ink-1);
+      }
 
-  //   &__link {
-  //     display: block;
-  //     height: 100%;
-  //     padding: 20px 30px;
-  //   }
+      .tel {
+        color: var(--color-beige-7);
+        font-weight: bold;
+      }
+    }
 
-  //   .burger-submenu {
-  //     width: 100%;
-  //     margin-left: 20px;
+    &_visible {
+      transform: translateX(-100dvw);
 
-  //     &__item {
-  //       position: relative;
-  //       border-top: 2px solid var(--color-menu-border);
+      &::before {
+        content: '';
+        position: absolute;
+        width: calc(100dvw - 100%);
+        height: 100dvh;
+        top: 0;
+        right: 100%;
+        backdrop-filter: brightness(50%) blur(4px);
+        opacity: 0;
+        animation: backdrop-appear 0.2s 0.2s ease-out forwards;
+      }
+    }
+  }
 
-  //       &::before {
-  //         content: '';
-  //         position: absolute;
-  //         width: 8px;
-  //         height: 8px;
-  //         top: 0;
-  //         bottom: 0;
-  //         left: 10px;
-  //         margin-block: auto;
-  //         border-radius: 50%;
-  //         background: var(--bg-section);
-  //       }
-
-  //       &__link {
-  //         display: block;
-  //         height: 100%;
-  //         padding: 20px 30px;
-  //         margin-right: 20px;
-  //         color: var(--color-points-light);
-  //       }
-  //     }
-  //   }
-  // }
-
-  // &_visible {
-  //   transform: translateX(-100dvw);
-
-  //   &::before {
-  //     content: '';
-  //     position: absolute;
-  //     width: calc(100dvw - 100%);
-  //     height: 100dvh;
-  //     top: 0;
-  //     right: 100%;
-  //     backdrop-filter: brightness(50%) blur(4px);
-  //     opacity: 0;
-  //     animation: backdrop-appear 0.2s 0.2s ease-out forwards;
-  //   }
-  // }
-}
-
-@keyframes backdrop-appear {
-  to {
-    opacity: 1;
+  @keyframes backdrop-appear {
+    to {
+      opacity: 1;
+    }
   }
 }
