--- a/src/scss/components/button_burger.scss
+++ b/src/scss/components/button_burger.scss
@@ -1,95 +1,54 @@
 .burger-btn {
-  // $line-h: 6px;
-  // $burger-h: calc($line-h * 5);
-  // $burger-w: calc($burger-h / 0.75);
+  $line-h: 6px;
+  $burger-h: calc($line-h * 5);
+  $burger-w: calc($burger-h / 0.75);
 
-  // width: $burger-w;
-  // height: $burger-h;
+  width: $burger-w;
+  height: $burger-h;
   display: none;
-  // position: relative;
-  // background: none;
+  position: relative;
+  background: none;
 
-  // span {
-  //   display: block;
-  //   position: absolute;
-  //   height: $line-h;
-  //   width: 50%;
-  //   background: var(--color-text-base);
-  //   opacity: 1;
-  //   transform: rotate(0deg);
-  //   transition: all var(--transition-duration) ease-in-out;
-  // }
+  span {
+    display: block;
+    position: absolute;
+    height: $line-h;
+    width: 100%;
+    background: var(--color-ink-2);
+    border-radius: $line-h;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: all var(--transition-duration) ease-in-out;
+  }
 
-  // span:nth-child(even) {
-  //   left: 50%;
-  //   border-radius: 0 $line-h $line-h 0;
-  // }
+  span:nth-child(1) {
+    top: 0;
+  }
+  span:nth-child(2),
+  span:nth-child(3) {
+    top: calc($line-h * 2);
+  }
+  span:nth-child(4) {
+    top: calc($line-h * 4);
+  }
 
-  // span:nth-child(odd) {
-  //   left: 0px;
-  //   border-radius: $line-h 0 0 $line-h;
-  // }
+  &.open span {
+    background: var(--color-beige-5);
+  }
 
-  // span:nth-child(1),
-  // span:nth-child(2) {
-  //   top: 0px;
-  // }
+  &.open span:nth-child(1),
+  &.open span:nth-child(4) {
+    top: calc($line-h * 2);
+    width: 0;
+    left: 50%;
+  }
 
-  // span:nth-child(3),
-  // span:nth-child(4) {
-  //   top: calc($line-h * 2);
-  // }
+  &.open span:nth-child(2) {
+    transform: rotate(45deg);
+  }
 
-  // span:nth-child(5),
-  // span:nth-child(6) {
-  //   top: calc($line-h * 4);
-  // }
-
-  // &.open {
-  //   margin-top: 1px;
-
-  //   span {
-  //     background: var(--color-text-accent-2);
-  //   }
-  // }
-
-  // &.open span:nth-child(1),
-  // &.open span:nth-child(6) {
-  //   transform: rotate(45deg);
-  // }
-
-  // &.open span:nth-child(2),
-  // &.open span:nth-child(5) {
-  //   transform: rotate(-45deg);
-  // }
-
-  // &.open span:nth-child(1) {
-  //   left: calc($line-h - 4px);
-  //   top: calc($line-h - 2px);
-  // }
-
-  // &.open span:nth-child(2) {
-  //   left: calc(50% - 5px);
-  //   top: calc($line-h - 2px);
-  // }
-
-  // &.open span:nth-child(3) {
-  //   left: -50%;
-  //   opacity: 0;
-  // }
-
-  // &.open span:nth-child(4) {
-  //   left: 100%;
-  //   opacity: 0;
-  // }
-
-  // &.open span:nth-child(5) {
-  //   left: calc($line-h - 4px);
-  //   top: calc($line-h * 3);
-  // }
-
-  // &.open span:nth-child(6) {
-  //   left: calc(50% - 5px);
-  //   top: calc($line-h * 3);
-  // }
+  &.open span:nth-child(3) {
+    transform: rotate(-45deg);
+  }
 }
