--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,5 +1,6 @@
 .footer {
   width: 100%;
+  padding: 40px var(--side-spacing) 42px;
   background: var(--bg-footer);
   box-shadow: var(--shadow-section);
   position: relative;
@@ -11,8 +12,14 @@
 
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    gap: 30px 60px;
+  }
+
+  nav {
+    margin-inline: auto;
   }
 
   &__menu {
@@ -29,12 +36,14 @@
   }
 
   &__credits {
+    margin-inline: auto;
     font-size: 14px;
     font-weight: 200;
+    line-height: 1.2;
 
     .copyright {
       position: relative;
-      margin-block: 40px 18px;
+      margin-bottom: 18px;
 
       &::before {
         content: '©';
@@ -45,7 +54,6 @@
     }
 
     .developer {
-      margin-bottom: 42px;
       display: flex;
       flex-direction: row;
       align-items: center;
