test deploy | demo - v.0.9

--- a/src/scss/common/variables.scss
+++ b/src/scss/common/variables.scss
@@ -26,16 +26,16 @@
 
   --bg-stripe-dark: linear-gradient(
     90deg,
-    transparent 0%,
+    #0000 0%,
     var(--color-dirty-blue) 50%,
-    transparent 100%
+    #0000 100%
   );
 
   --bg-stripe-light: linear-gradient(
     90deg,
-    transparent 0%,
+    #0000 0%,
     var(--color-beige-2) 50%,
-    transparent 100%
+    #0000 100%
   );
 
   --bg-footer: linear-gradient(
