--- a/src/scss/components/section_contacts.scss
+++ b/src/scss/components/section_contacts.scss
@@ -90,6 +90,11 @@
       max-width: 520px;
       height: 420px;
       box-shadow: var(--shadow-card-dark);
+
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
