bug fix | demo - v.1.0

--- a/src/scss/common/media_queries.scss
+++ b/src/scss/common/media_queries.scss
@@ -370,6 +370,12 @@
         }
       }
     }
+
+    .exp__decal {
+      left: 20%;
+      width: 80%;
+      height: auto;
+    }
   }
 
   #contacts {
