--- a/src/scss/components/section_exp.scss
+++ b/src/scss/components/section_exp.scss
@@ -107,7 +107,7 @@
 
   .exp__decal {
     position: absolute;
-    left: calc(50% + 20px);
+    left: 50%;
     bottom: 0;
     pointer-events: none;
     mix-blend-mode: soft-light;
